Fix small count not aligning with large counts

--- a/src/styles/components/countdown/CountdownTimer.module.css
+++ b/src/styles/components/countdown/CountdownTimer.module.css
@@ -35,7 +35,7 @@
 
 .smallTimeSection {
   margin-left: 1rem;
-  margin-bottom: 2.6rem;
+  margin-bottom: 3.6rem;
 
   display: flex;
   align-items: flex-end;
